Try to fix zoom on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,8 @@
   height: 100%;
   z-index: 100;
 }
+
+.play-area {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+}
